fix: Gap under card content in Safari

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -236,6 +236,7 @@ body {
 
 /* Styles for Card Content */
 .card__content {
+  height: 100%; // To fix the gap under card content in Safari.
   display: flex;
   flex-direction: column;
   gap: $space-40;
